# navcoin-core

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libsoftcoinconsensus.pc.in  softcoin.sh
.tx/: config
build-aux/m4/: softcoin_find_bdb48.m4  softcoin_qt.m4  softcoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  qt_translations.py  softcoin-cli.bash-completion  softcoin-qt.pro  softcoin-tx.bash-completion  softcoind.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  rules  softcoin-qt.desktop  softcoin-qt.install  softcoin-qt.lintian-overrides  softcoin-qt.protocol  softcoin-tx.bash-completion  softcoin-tx.install  softcoind.bash-completion  softcoind.examples  softcoind.install  softcoind.lintian-overrides  softcoind.manpages  (+1 more)
depends/: Makefile
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  SoftCoin-4.0.files  SoftCoin4-Qt.files  SoftCoin4.files  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  (+56 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: SoftCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  (+65 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: softcoin_af.ts  softcoin_af_ZA.ts  softcoin_ar.ts  softcoin_be_BY.ts  softcoin_bg.ts  softcoin_bg_BG.ts  softcoin_ca.ts  softcoin_ca@valencia.ts  softcoin_ca_ES.ts  softcoin_cs.ts  softcoin_cs_CZ.ts  softcoin_cy.ts  softcoin_da.ts  softcoin_de.ts  softcoin_el.ts  softcoin_el_GR.ts  softcoin_en.ts  softcoin_en_GB.ts  softcoin_eo.ts  softcoin_es.ts  softcoin_es_AR.ts  softcoin_es_CL.ts  softcoin_es_CO.ts  softcoin_es_DO.ts  softcoin_es_ES.ts  softcoin_es_MX.ts  softcoin_es_UY.ts  softcoin_es_VE.ts  softcoin_et.ts  softcoin_eu_ES.ts  softcoin_fa.ts  softcoin_fa_IR.ts  softcoin_fi.ts  softcoin_fr.ts  softcoin_fr_CA.ts  softcoin_fr_FR.ts  softcoin_gl.ts  softcoin_he.ts  softcoin_hi_IN.ts  softcoin_hr.ts  (+45 more)
src/qt/res/: softcoin-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  softcoinconsensus.cpp  softcoinconsensus.h  standard.cpp  standard.h
src/secp256k1/src/java/: org_softcoin_NativeSecp256k1.c  org_softcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/navcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+17 more)
src/test/data/: README.md  softcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  softnode.cpp  softnode.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+130 files in other folders)
